# X-twitter-api-v2-cli

./: .gitignore  README.md  example.env  main.py  oauth1.py  pyproject.toml  tweet.py
x_bot/: auth.py
x_twitter_api_v2_cli/: auth.py  tweet.py
